# cerul-cli

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: client.rs  config.rs  error.rs  main.rs  output.rs  types.rs
src/commands/: completions.rs  config.rs  history.rs  login.rs  mod.rs  search.rs  upgrade.rs  usage.rs
